i should do more commits. display windows are loaded and id clases are substituted. dist works now :3

--- a/dist-display/index.html
+++ b/dist-display/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="display.css" rel="stylesheet">
+    <script src="script.js"></script>
+    <!--Elements that require display window-index-independent styles musty have classes with an # in their name; when the window is loaded, all #'s will be replaced by the appropriate window index.'-->
   </head>
-  <body>
- <h1>:3</h1> 
+  <body class="body-#">
   </body>
 </html>
