holy shit finally the buttons respond to all displays getting their text :/

--- a/dist-display/index.html
+++ b/dist-display/index.html
@@ -6,8 +6,8 @@
     <title></title>
     <link href="display.css" rel="stylesheet">
     <script src="script.js"></script>
-    <!--Elements that require display window-index-independent styles musty have classes with an # in their name; when the window is loaded, all #'s will be replaced by the appropriate window index.'-->
+    <!--Elements that require display window-index-independent styles must have classes with an # in their name; when the window is loaded, all #'s will be replaced by the appropriate window index.'-->
   </head>
-  <body class="body-#">
+  <body class="d-#-body">
   </body>
 </html>
