--- a/dist-display/index.html
+++ b/dist-display/index.html
@@ -6,8 +6,9 @@
     <title></title>
     <link href="display.css" rel="stylesheet">
     <script src="script.js"></script>
+    <style id="style-tag"></style>
     <!--Elements that require display window-index-independent styles must have classes with an # in their name; when the window is loaded, all #'s will be replaced by the appropriate window index.'-->
   </head>
-  <body class="d-#-body">
+  <body class="d-#-global">
   </body>
 </html>
