background images work :3

--- a/dist-display/index.html
+++ b/dist-display/index.html
@@ -9,6 +9,6 @@
     <style id="style-tag"></style>
     <!--Elements that require display window-index-independent styles must have classes with an # in their name; when the window is loaded, all #'s will be replaced by the appropriate window index.'-->
   </head>
-  <body class="d-#-global">
+  <body class="d-#-global global">
   </body>
 </html>
