--- a/dist-display/index.html
+++ b/dist-display/index.html
@@ -10,5 +10,6 @@
     <!--Elements that require display window-index-independent styles must have classes with an # in their name; when the window is loaded, all #'s will be replaced by the appropriate window index.'-->
   </head>
   <body class="d-#-global global">
+    <div id="main-container"></div>
   </body>
 </html>
